# lzsfem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  RgFem.code-workspace  note.ipynb  readfile.py
CppFem/: CMakeLists.txt
CppFem/func_test/: func_test.cpp
CppFem/src/: 2dSquare.cpp  vector_test.cpp
CppFem/src/algebra/: IMatrix.h  Matrix.h  SparseMatrix.h  Vector.h  dictionary.h  floatarray.h  floatarrayf.h  floatmatrix.h  intarray.h  mathfem.h  pair.h  range.h  scalarfunction.h  sparsemtrx.h
CppFem/src/elements/: Bar1d.cpp  Element-.cpp  Element.cpp  Element.h  Node.h  Quad2.cpp  Quad2.h  Rod.h  element.cpp
CppFem/src/examples/: VonMisesSquare.cpp  arcLengthTest.cpp  meshSets.cpp
CppFem/src/fem/: Discretization.cpp  Discretization.h  GaussIntegration.cpp  GaussIntegration.h  IDiscretization.h  ImplAssembly.cpp
CppFem/src/femcore/: FECoreFactory.h  FECoreKernel.h  assemblercallback.h  bcgeomtype.h  bctype.h  contextmode.h  contextoutputmode.h  dof.h  dofiditem.h  doftype.h  domain.cpp  domain.h  domaintype.h  elementgeometrytype.h  engngm.cpp  engngm.h  enumitem.h  fem_application.cpp  fem_application.h  fem_export.h  fem_factory.h  femcmpnn.C  femcmpnn.cpp  femcmpnn.h  field.cpp  field.h  field_manager.cpp  fmode.h  generalboundarycondition.h  linsystsolvertype.h  masterdof.h  metastep.h  modulemanager.h  nummet.h  primaryfield.h  problemmode.h  set.h  timer.cpp  timer.h  timestep.h  (+1 more)
CppFem/src/input/: datareader.h  dynamic_data_reader.cpp  dynamic_data_reader.h  dynamic_input_record.cpp  dynamic_input_record.h  inputrecord.cpp  inputrecord.h  text_data_reader.cpp  text_data_reader.h  text_input_record.cpp  text_input_record.h
CppFem/src/interpolation/: InterQuad2d.cpp  InterQuad2d.h  fe_interpol.cpp  fe_interpol.h  fei1d_line_hermite.h  fei1d_line_quad.h  fei2d_quad_linear.cpp  fei2d_quad_linear.h  fei_element_geometry_wrapper.h  feinterpol1d.h  feinterpol2d.cpp  feinterpol2d.h
CppFem/src/logger/: error.h  logger.cpp  logger.h
CppFem/src/materials/: ElasticMaterial.cpp  ElasticMaterial.h  ElastoPlasticMaterial.h  IMaterial.h  Material-.cpp  Material-.h  Material.h  PlaneStrain.h  PlaneStress.h  VonMises.cpp  VonMisesPlaneStrain.cpp  VonMisesPlaneStress.h  crosssection.h  matconst.h  materialmode.h  matstatus.h
CppFem/src/meshing/: CustomMesh.h  Mesh.cpp  Mesh.h  NaiveMesh.h
CppFem/src/node/: node.h
CppFem/src/physics/: BoundaryConditions.cpp  BoundaryConditions.h  MechanicalBoundaryConditions.cpp  boundarycondition.h  load.h
CppFem/src/plotter/: Plotter.cpp  Plotter.h  gnuplot_i.cpp  gnuplot_i.hpp
CppFem/src/quadrature/: gaussintegrationrule.h  integrationrule.h
CppFem/src/solver/: ArcLength.cpp  ArcLength.h  IterativeLinearSolver.cpp  IterativeLinearSolver.h  Jacobi.h  LSolver.cpp  LSolver.h  LinearIteration.h  LinearIterativeSolver.cpp  NLSolver.cpp  NLSolverBiCGStab.cpp  NLSolverCG.cpp  linsystsolvertype.h
CppFem/src/src.und/: id.txt  settings.xml
CppFem/src/tensors/: Strain.cpp  Strain.h  Stress.cpp  Tensor.cpp
RgFem/src/: CMakeLists.txt  plot_test.cpp  tocmake.py  vonMisesTest.cpp
RgFem/src/algebra/: floatarray.h  floatarrayf.h  floatmatrix.h  floatmatrixf.h  intarray.h  intarrayf.h  mathfem.h
RgFem/src/app/: AppUtils.cpp  AppUtils.h  CmakeList--s.txt  CmakeLists.txt  CmdOptions.cpp  CmdOptions.h  FEAppConfig.cpp  FEAppConfig.h  FEBioApp.h  RgFemApp.cpp  RgFemApp.h  main.cpp
RgFem/src/basicio/: CMakeList--s.txt  CMakeLists.txt  DataRecord.cpp  DataRecord.h  DataStore.cpp  DataStore.h  DomainDataRecord.cpp  DomainDataRecord.h  DumpFile.cpp  DumpFile.h  DumpMemStream.cpp  DumpMemStream.h  DumpStream.cpp  DumpStream.h  ElementDataRecord.cpp  ElementDataRecord.h  FEBioMechPlot.h  FEDataExport.cpp  FEDataExport.h  FEDataStream.h  FEModelDataRecord.cpp  FEModelDataRecord.h  FEPlotData.cpp  FEPlotData.h  FEPlotDataStore.cpp  FEPlotDataStore.h  FaceDataRecord.cpp  FaceDataRecord.h  NLConstraintDataRecord.cpp  NLConstraintDataRecord.h  NodeDataRecord.cpp  NodeDataRecord.h  ObjectDataRecord.cpp  ObjectDataRecord.h  SurfaceDataRecord.cpp  SurfaceDataRecord.h
RgFem/src/basictool/: CMakeLists.txt
RgFem/src/datastructure/: CMakeLists.txt  FEBoundingBox.h  MathObject.h  MathUtils.h  Matrix2d.h  Matrix3d.cpp  Matrix3d.h  Matrix3d.hpp  Matrix3dSpecial.cpp  Matrix3dSpecial.h  MatrixOperator.h  MatrixProfile.h  Vector2d.h  Vector3d.h  mat3d.h  mathalg.cpp  mathalg.h  matrix.cpp  matrix.h  matrix_old.h  quatd.cpp  quatd.h  table.h  tens3d.cpp  tens3d.h  tens3d.hpp  tens3dls.hpp  tens3drs.hpp  tens3ds.hpp  tens4d.cpp  tens4d.h  tens4d.hpp  tens4dmm.hpp  tens4dms.hpp  tens4ds.hpp  vector.cpp  vector.h  vector_operator.cpp  vector_operator.h
RgFem/src/elements/: Bar1d.h  CMakeLists.txt  Element.h  Element_bio.h  FEElemElemList.cpp  FEElemElemList.h  FEElement.h  FEElement2d.cpp  FEElement2d.h  FEElementLibrary.cpp  FEElementLibrary.h  FEElementList.cpp  FEElementList.h  FEElementSet.cpp  FEElementSet.h  FEElementShape.cpp  FEElementShape.h  FEElementState.cpp  FEElementState.h  FEElementTraits.cpp  FEElementTraits.h  FEShellElement.cpp  FEShellElement.h  FEShellElementTraits.h  FESolidElement.cpp  FESolidElement.h  FEStructureElement.cpp  FEStructureElement.h  FESurfaceElement.cpp  FESurfaceElementShape.cpp  FESurfaceElementShape.h  FESurfaceElementTraits.h  FETrussElement.cpp  FETrussElement.h  NaturalCoord.cpp  NaturalCoord.h  Quad2.h  RgElemElemList.cpp  RgElemElemList.h  RgElemTypeDefine.h  (+14 more)
RgFem/src/examples/: nonLinear.cpp
RgFem/src/femcore/: Assembly.h  BSpline.cpp  BSpline.h  CMakeLists.txt  Callback.cpp  Callback.h  DOFS.cpp  DOFS.h  DataRecord.h  DomainDataRecord.h  ElementDataRecord.h  FE3FieldElasticSolidDomain.cpp  FEAnalysis.cpp  FEAnalysis.h  FEBeamDomain.h  FEBodyForce.cpp  FEBodyForce.h  FEBodyLoad.cpp  FEBodyLoad.h  FEBoundaryCondition.cpp  FEBoundaryCondition.h  FEConstValueVec3.cpp  FECore.h  (+247 more)
RgFem/tests/: CMakeLists.txt  RgGaussPoint_test.cpp  box_tension.feb
libfemp/: CMakeLists.txt
libfemp/example/: CMakeLists.txt  runner.cpp
libfemp/src/: Analysis.cpp  CMakeLists.txt  Group.cpp  LinearAnalysis.cpp  Model.cpp
(+659 files in other folders)
